# oem-setup-linux

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  flake.nix  install.sh  justfile
.github/workflows/: ci.yml  release.yml
data/desktop/: oem-setup.desktop
data/polkit/: fi.local.oem-setup.policy
data/scripts/: oem-apply.sh  oem-cleanup.sh
data/systemd/: oem-cleanup.service
etc/polkit-1/actions/: fi.local.oem-setup.policy
etc/sudoers.d/: oem-setup
home/setup/.config/autostart/: oem-setup.desktop
install/: arch.sh  fedora.sh  generic.sh  install.sh
nix/: package.nix
src/common/: CMakeLists.txt  Validation.cpp  Validation.h
src/gui/: CMakeLists.txt  Installer.cpp  Installer.h  OemSetupController.cpp  OemSetupController.h  main.cpp
src/gui/qml/: Main.qml
src/gui/qml/animations/: LanguageAnimation.qml  NameAnimation.qml  PasswordAnimation.qml  WelcomeAnimation.qml  qmldir
src/gui/qml/components/: PrimaryButton.qml  SecondaryButton.qml  StepIndicator.qml  TextFieldCard.qml  WizardFrame.qml  qmldir
src/gui/qml/pages/: ConfirmPage.qml  DonePage.qml  ErrorPage.qml  LanguagePage.qml  NamePage.qml  PasswordPage.qml  ProgressPage.qml  WelcomePage.qml  qmldir
tests/: CMakeLists.txt  ValidationTest.cpp
translations/: oem-setup_en.ts
usr/local/sbin/: oem-setup-apply.sh
